--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -105,12 +105,30 @@ jobs:
     outputs:
       publishversion: ${{ needs.build.outputs.publishversion }}
 
+  createchange:
+    name: Deploy
+    needs: test
+    runs-on: ubuntu-latest
+    steps:     
+      - name: ServiceNow Change
+        uses: ServiceNow/servicenow-devops-change@v1.34.2
+        with:
+          devops-integration-user-name: ${{ secrets.SN_USERNAME }}
+          devops-integration-user-password: ${{ secrets.SN_PASSWORD }}
+          instance-url: ${{ secrets.SN_PROD_INSTANCE }}
+          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+          context-github: ${{ toJSON(github) }}
+          job-name: 'Deploy'
+          change-request: '{"setCloseCode":"true","attributes":{"short_description":"Automated Software Deployment","description":"Automated Software Deployment.","assignment_group":"a715cd759f2002002920bde8132e7018","implementation_plan":"Software update is tested and results can be found in Test Summaries Tab; When the change is approved the implementation happens automated by the CICD pipeline within the change planned start and end time window.","backout_plan":"When software fails in production, the previous software release will be re-deployed.","test_plan":"Testing if the software was successfully deployed"}}'
+          interval: '100'
+          timeout: '3600'
+
   deployprod:
     # Purpose of this job is to Install App to a Prod instance. This should only 
     # trigger if the feature branch has been merged to master after a successfully 
     # completed pull request, hence the conditional for push to master. In other words,
     # the first two jobs run on CI, then all three jobs run on CD. 
-    needs: test
+    needs: createchange
     name: Deploy to Prod
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
