--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -109,6 +109,7 @@ jobs:
     name: Deploy
     needs: test
     runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
     steps:     
       - name: ServiceNow Change
         uses: ServiceNow/servicenow-devops-change@v1.34.2
