--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -106,7 +106,7 @@ jobs:
       publishversion: ${{ needs.build.outputs.publishversion }}
 
   createchange:
-    name: Deploy
+    name: Create Change
     needs: test
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
