--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -116,7 +116,7 @@ jobs:
         with:
           devops-integration-user-name: ${{ secrets.SN_USERNAME }}
           devops-integration-user-password: ${{ secrets.SN_PASSWORD }}
-          instance-url: ${{ secrets.SN_PROD_INSTANCE }}
+          instance-url: ${{ secrets.SN_INSTANCE_URL_PROD }}
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           context-github: ${{ toJSON(github) }}
           job-name: 'Deploy'
