--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -107,8 +107,10 @@ jobs:
   createchange:
     name: Create Change
     runs-on: ubuntu-latest
+    needs: test
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
     steps:
-      - name: ServiceNow Change
+      - name: ServiceNow DevOps Change Automation
         uses: ServiceNow/servicenow-devops-change@v1.35.2
         with:
           devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -126,8 +128,7 @@ jobs:
     # trigger if the feature branch has been merged to master after a successfully 
     # completed pull request, hence the conditional for push to master. In other words,
     # the first two jobs run on CI, then all three jobs run on CD. 
-    needs: test
-    #createchange
+    needs: createchange
     name: Deploy to Prod
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
