--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -120,7 +120,8 @@ jobs:
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           context-github: ${{ toJSON(github) }}
           job-name: 'Create Change Job'
-          change-request: ${{'{"orchestrationTaskURL":"https://github.com/' + github.repository + '/actions/runs/' + github.run_id +'/jobs/' + job.container.id + '","callbackURL":"' + github.event + '","setCloseCode":"true","attributes":{"short_description":"Automated Software Deployment","description":"Automated Software Deployment.","assignment_group":"a715cd759f2002002920bde8132e7018","implementation_plan":"Software update is tested and results can be found in Test Summaries Tab; When the change is approved the implementation happens automated by the CICD pipeline within the change planned start and end time window.","backout_plan":"When software fails in production, the previous software release will be re-deployed.","test_plan":"Testing if the software was successfully deployed"}}' }}
+          #format('Hello {0} {1} {2}', 'Mona', 'the', 'Octocat')
+          change-request: format('{"orchestrationTaskURL":"https://github.com/{0}/actions/runs/{1}/jobs/{2}","callbackURL":"{3}","setCloseCode":"true","attributes":{"short_description":"Automated Software Deployment","description":"Automated Software Deployment.","assignment_group":"a715cd759f2002002920bde8132e7018","implementation_plan":"Software update is tested and results can be found in Test Summaries Tab; When the change is approved the implementation happens automated by the CICD pipeline within the change planned start and end time window.","backout_plan":"When software fails in production, the previous software release will be re-deployed.","test_plan":"Testing if the software was successfully deployed"}}', github.repository, github.run_id, job.container.id, github.event)
           interval: '100'
           timeout: '3600'
 
