--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -113,8 +113,8 @@ jobs:
     runs-on: ubuntu-latest 
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
     steps:
-      - name: bob
-        run: echo ${{ format('orchestrationTaskURL:https://github.com/{0}/actions/runs/{1}/jobs/{2}; callbackURL:{3}', github.action_repository, github.run_id, github.job.container.id, '') }}
+      - name: Log orchestrationTaskURL
+        run: echo ${{ format('orchestrationTaskURL:https://github.com/{0}/actions/runs/{1}', github.action_repository, github.run_id') }}
       - name: ServiceNow DevOps Change Automation
         uses: ServiceNow/servicenow-devops-change@v1.35.2
         with:
