--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,7 +11,7 @@ jobs:
     # the pipeline build to the Dev instance, then publish the application to 
     # app repo using the template versioning format. 
     name: Publish from Dev
-    environment: Test Env
+    #environment: Test Env
     runs-on: ubuntu-latest
     # Below line can be used to set conditionals for modifying your pipeline as needed.
     # if: ${{ github.event_name == 'pull_request'}}
@@ -54,7 +54,7 @@ jobs:
     # to clean up the persistent Test environment. 
     name: Run ATF in Test
     needs: build
-    environment: Test Env
+    #environment: Test Env
     runs-on: ubuntu-latest
     # Below line can be used to set conditionals for modifying your pipeline as needed.
     # if: ${{ github.event_name == 'pull_request'}}
