--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-
+#trigger rebuild
 jobs:
   build:
     # Purpose of this job is to Apply Remote Changes for the branch triggering 
