--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -112,6 +112,8 @@ jobs:
     runs-on: ubuntu-latest 
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
     steps:
+      - name: Log orchestrationTaskURL
+        run: echo ${{ format('orchestrationTaskURL:https://github.com/{0}/actions/runs/{1}', github.action_repository, github.run_id') }}
       - name: ServiceNow DevOps Change Automation
         uses: ServiceNow/servicenow-devops-change@v1.35.2
         with:
